# ScienceFeed

./: .env.example  .gitignore  README.md  components.json  docker-compose.yml  drizzle.config.ts  eslint.config.js  knip.json  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
backend/: .env.example  Dockerfile  config.py  pyproject.toml  server.py
backend/api/: app.py  decorators.py  email.py  errors.py  handlers.py  models.py  routes.py  schemas.py  tokens.py  utils.py
backend/api/templates/: password_reset.html  register.html  unread_articles.html
backend/cli/: commands.py  tasks.py
drizzle/: 0000_colorful_rage.sql  0001_rss_feed_fetch_status.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/: .env.example  Dockerfile  components.json  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json
frontend/src/: app.jsx  index.css  main.jsx  router.jsx
frontend/src/api/: apiClient.js  fetcher.js  mutations.js  queryClient.js  queryOptions.js
frontend/src/components/: app-sidebar.jsx  nav-dashboard.jsx  nav-managers.jsx  (+1 more)
public/static/: seed-rss-feeds.json
scripts/: cleanup-deleted-articles.ts  migrate-script.js  migrate-script.ts
src/: routeTree.gen.ts  router.tsx  server.ts  start.ts  styles.css
src/cli/: cli.ts
src/components/: default-catch-boundary.tsx  default-not-found.tsx  muted-text.tsx  page-title.tsx  pagination.tsx  theme-toggle.tsx
src/env/: client.ts  server.ts
src/hooks/: use-auth.ts
src/routes/: __root.tsx  _private.tsx  _public.tsx
(+178 files in other folders)
