[project]
name = "ScienceFeed"
version = "1.1.0"
description = "Keep track of your reseach field using RSS feeds"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.0",
    "feedparser>=6.0.11",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "flask-httpauth>=4.8.0",
    "flask-mail>=0.10.0",
    "flask-marshmallow>=1.3.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "marshmallow>=3.26.0",
    "marshmallow-sqlalchemy>=1.4.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "webargs>=8.6.0",
]
